# eye

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml
eye/: README.md  app.py  llm.py  main.py  styles.tcss
eye/views/: chatbot_screen.py  object_explore_widget.py  object_screen.py  object_tree.py  object_tree_widget.py  object_viewer_widget.py  organization.py  organization_widget.py  security.py  security_widget.py  user_screen.py  users_widget.py
eye/widgets/: config_label.py  status.py
