[project]
name = "eye"
version = "0.1.0"
description = "A sample Python project"
authors = [{name = "Diamantis Sellis", email = "diamantis.sellis@cosmotech.com"}]
license = { text = "MIT" }
dependencies = [
    "cosmotech-api @ git+https://github.com/Cosmo-Tech/cosmotech-api-python-client.git",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "python-keycloak~=5.1.1",
    "python-dotenv",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-mock"
]
